# Nausicaa

./: .gitattributes  .gitignore  LICENSE  README.md  nausicaa_build_backend.py  pyproject.toml  requirements-control-dev.txt  requirements-control.txt  requirements-design.txt  requirements-dev.txt  requirements.txt
01_Initial_Glider_Design/: .gitignore  A_Testing_CG.py  B_Testing_Inertia.py  B_Thermal.py  C_Multi_Thermal.py  C_Thermal.py  D_Multi_Thermal.py  E_Plot_Airfoil.mlx  F_Multi_Interact_Thermal.py  Nausicaa - try.py  Nausicaa copy.py  Nausicaa.py  Nausicaa11.py  Nausicaa_test.py  Nausicaa_v_1_0.py  Nausicaa_v_1_2.py  Nausicaa_v_1_3.py  Nausicaa_v_1_4.py  Nausicaa_v_2_0.py  Nausicaa_v_2_3.py  Nausicaa_v_3_0.py  Nausicaa_v_3_1.py  a.py  config.py  debug_nlp.py  generate.py  run_opt.py  utils_git.py
01_Thermal/: S01.xlsx  Tape Position.xlsx  annular_gp_models.py  environment.yml  four_fan_analytic.py  four_fan_annular_gaussian_bemt.py  four_fan_annular_gaussian_bemt_3D.py  four_fan_annular_gaussian_bemt_analysis.py  four_fan_annular_gaussian_bemt_fit.py  four_fan_annular_gaussian_bemt_heat_map.py  four_fan_annular_gaussian_bemt_heat_map_main.py  four_fan_annular_gaussian_bemt_heat_map_main_appendix.py  four_fan_annular_gaussian_bemt_tune.py  four_fan_annular_gaussian_var.py  four_fan_annular_gaussian_var_3D.py  four_fan_annular_gaussian_var_analysis.py  four_fan_annular_gaussian_var_fit.py  four_fan_annular_gaussian_var_heat_map.py  four_fan_annular_gaussian_var_heat_map_main.py  four_fan_annular_gaussian_var_heat_map_main_appendix.py  four_fan_annular_gp.py  four_fan_annular_gp_3D.py  four_fan_annular_gp_fluc_heat_map.py  four_fan_annular_gp_fluc_heat_map_main.py  four_fan_annular_gp_heat_map.py  (+89 more)
(+24454 files in other folders)
