[build-system]
requires = []
build-backend = "nausicaa_build_backend"
backend-path = ["."]

[project]
name = "nausicaa"
version = "0.1.1"
description = "Primitive-level control and simulation evidence for the Nausicaa indoor glider."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aerosandbox>=4.2,<5",
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "casadi>=3.6",
    "openpyxl>=3.1",
]

[tool.pytest.ini_options]
pythonpath = [
    "03_Control/02_Inner_Loop",
    "03_Control/03_Primitives",
    "03_Control/04_Scenarios",
    "03_Control/05_Results",
]
